css/styles.css
/* Guide

Brand Colours:
- Primary: #3F2305
- Secondary: #DFD7BF
- Background: #F5F5F5
- Text: #000000
- Other: #F2EAD3

Google Font:
- Kodchasan: 300lig, 400reg, 400ital, 700bol

Links Order:
- link, visited, hover, focus, active
colours:
- visited = default
- hover/focus = active
- hover/focus ≠ default

*/

@import url('https://fonts.googleapis.com/css2?family=Kodchasan:ital,wght@0,300;0,400;0,700;1,400&display=swap');

/* general ************************************************************************************************/

* {
    box-sizing: border-box;
}

html {
    scroll-behavior: smooth;
}

body {
    font-size: 16px;
    font-weight: 300;
    line-height: 1.6;
    font-family: 'Kodchasan', sans-serif;
    background-color: #F5F5F5;
    color: #000000;
}

main {
    padding-top: 80px;
}

/* left & right for all pages */
.container {
    padding: 0 15px;
}

/* headings */
h1,
h2,
h3,
h4 {
    line-height: 1.4;
}

h1,
h2 {
    font-weight: 700;
}

h1 {
    font-size: 2.55em;
}

h2 {
    font-size: 2.25em;
}

h3,
h4 {
    font-weight: 400;
}

h3 {
    font-size: 1.75em;
}

h4 {
    font-size: 1.25em;
}

img {
    width: 100%;
}

/* anchor links */
a,
a:visited {
    color: #3F2305;
}

a:hover,
a:focus {
    color: #DFD7BF;
    text-decoration: none;
}

a:active {
    color: #DFD7BF;
}

/* small navbar ************************************************************************************************/

#bigNav {
    display: none;
}

.logo-and-bars {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

/* logo */
.logo {
    width: 150px;
}

#smallNav {
    background-color: #C4B37D;
    text-align: center;
    padding: 10px 0;
    box-shadow: 5px 5px 15px 3px #3F2305;
    position: fixed;
    width: 100%;
    z-index: 2;
}

#smallNav .links {
    display: none;
}

#smallNav .links ul {
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: flex-start;
    grid-row-gap: 2rem;
}

#smallNav li {
    list-style-type: none;
    display: inline-block;
}

#smallNav .links a {
    text-decoration: none;
    font-weight: bold;
    text-transform: uppercase;
}

/* overlay */
.overlay {
    background-color: #3F2305;
    position: fixed;
    width: 100%;
    height: 100%;
    top: 0;
    opacity: 0.2;
    display: none;
}

/* burger icon */
.fa-solid {
    cursor: pointer;
    font-size: 2rem;
    color: #3F2305;
    text-decoration: none;
    padding: 0 15px 0 0;
}

.fa-solid:visited {
    color: #3F2305;
}

.fa-solid:hover,
.fa-solid:focus,
.fa-solid:active {
    color: #DFD7BF;
}

/* footer ************************************************************************************************/

#contact {
    background-color: #F2EAD3;
    text-align: center;
    padding: 10px 0;
    box-shadow: 5px 5px 15px 3px #3F2305;
    width: 100%;
    margin-top: 3em;
}

/* email link */
.button.email {
    background-color: transparent;
    color: #3F2305;
    text-transform: uppercase;
    border: 2px solid #3F2305;
}

.button.email:visited {
    background-color: transparent;
    color: #3F2305;
}

.button.email:hover,
.button.email:focus {
    background-color: #3F2305;
    color: #F2EAD3;
}

.button.email:active {
    background-color: #3F2305;
    color: #F2EAD3;
    font-weight: 700;
}

/* footer icons */
#contact ul {
    padding: 10px 0;
}

#contact li {
    list-style-type: none;
    display: inline-block;
}

.fa-brands {
    font-size: 2rem;
    color: #3F2305;
    text-decoration: none;
    padding: 0 10px;
}

.fa-brands:visited {
    color: #3F2305;
}

.fa-brands:hover,
.fa-brands:focus,
.fa-brands:active {
    color: #DFD7BF;
}

/* home page ************************************************************************************************/

/* titles */
#homePage h1,
#homePage h2 {
    text-align: center;
}

#selfIntro {
    background-color: #F2EAD3;
    padding: 20px 0;
    display: inline-block;
    width: 100%;
}

#selfIntro h1 {
    color: #3F2305;
}

#selfIntro span {
    display: block;
    font-size: 70%;
    margin-block-start: 0.6em;
    color: #000000;
}

#selfIntro .container p:last-child {
    margin-block-start: 2em;
}

/* project thumbnails */
#projects .row {
    margin: 25px 0;
    border-bottom: 2px solid #3F230533; /* added '33' for 20% transparency */
    padding-bottom: 25px;
}

#projects .row:last-child {
    margin: 0;
    border-bottom: none;
    padding-bottom: 0;
}

#projects span {
    font-weight: bold;
}

/* "read more" links */
.button {
    background-color: #F2EAD3;
    color: #3F2305;
    font-weight: 400;
    padding: 10px;
    border-radius: 5px;
    display: inline-block;
    border-bottom: #3F2305 solid 2px;
    text-decoration: none;
    transition: all 0.2s;
}

.button:visited {
    background-color: #F2EAD3;
    color: #3F2305;
}

.button:hover {
    background-color: #000000;
    color: #DFD7BF;
    opacity: 0.8;
    text-decoration: none;
}

.button:focus,
.button:active {
    background-color: #000000;
    color: #DFD7BF;
    text-decoration: none;
}

/* about page ************************************************************************************************/

/* title */
#aboutMe h1 {
    text-align: center;
}

/* image */
.avatar {
    display: flex;
    justify-content: center;
}

.avatar img {
    border: 10px solid #F2EAD3;
    box-shadow: 5px 5px 5px 5px #3F2305;
    max-width: 300px;
    padding: 5px;
}

#aboutPage ul li {
    list-style-type: square;
}

/* project pages ************************************************************************************************/

/* user-research */
.user-research {
    display: flex;
    flex-direction: column;
    overflow: auto;
    grid-gap: 2em;
}

.user-research img {
    height: 500px;
    width: 600px;
}

#frugalityFirstProject .user-research img { 
    height: 500px;
    width: 700px;
}
/* ... */

